Profil Design angepasst

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -60,25 +60,25 @@
                 <div class="card-body">
                     <dl class="">
                         <dt class="">Vorname</dt>
-                        <dd class="" id="vorname">Ole</dd>
+                        <dd class="" id="vorname"></dd>
 
                         <dt class="">Nachname</dt>
-                        <dd class="" id="nachname">Kohl</dd>
+                        <dd class="" id="nachname"></dd>
 
                         <dt class="">Geschlecht</dt>
-                        <dd class="" id="geschlecht">Männlich</dd>
+                        <dd class="" id="geschlecht"></dd>
 
                         <dt class="">Geburtsdatum</dt>
-                        <dd class="" id="geburtsdatum">05.03.1997</dd>
+                        <dd class="" id="geburtsdatum"></dd>
 
                         <dt class="">Intoleranzen</dt>
-                        <dd class="" id="intoleranzen">Nikotinallergie, Allergische Rhinitis</dd>
+                        <dd class="" id="intoleranzen"></dd>
 
                         <dt class="">Blutgruppe</dt>
-                        <dd class="" id="blutgruppe">AB Rh pos</dd>
+                        <dd class="" id="blutgruppe"></dd>
 
                         <dt class="">Notfallkontakt</dt>
-                        <dd class="" id="notfallkontakt">01764379124</dd>
+                        <dd class="" id="notfallkontakt"></dd>
                     </dl>
                 </div>
             </div>
