--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,14 +19,16 @@
     <a class="navbar-brand" href="profil.html">
         <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="dokumente.html"><i class="material-icons big">folder</i> Dokumente</a>
@@ -38,35 +41,61 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-auto">
-            <div class="card bg-light">
-                <div class="card-body">
-                    <dl class="">
-                        <dt class="">Vorname</dt>
-                        <dd class="" id="vorname">Ole</dd>
-
-                        <dt class="">Nachname</dt>
-                        <dd class="" id="nachname">Kohl</dd>
-
-                        <dt class="">Geschlecht</dt>
-                        <dd class="" id="geschlecht">Männlich</dd>
-
-                        <dt class="">Geburtsdatum</dt>
-                        <dd class="" id="geburtsdatum">05.03.1997</dd>
-
-                        <dt class="">Intoleranzen</dt>
-                        <dd class="" id="intoleranzen">Nikotinallergie, Allergische Rhinitis</dd>
-
-                        <dt class="">Blutgruppe</dt>
-                        <dd class="" id="blutgruppe">AB Rh pos</dd>
-
-                        <dt class="">Notfallkontakt</dt>
-                        <dd class="" id="notfallkontakt">01764379124</dd>
-                    </dl>
+<div class="container-fluid">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <div class="card bg-light mb-3">
+                <div class="card-body">
+                    <form>
+                        <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()"
+                               placeholder="Titel">
+                        <input type="text" class="form-control mb-2" id="inputBeschreibung"
+                               onkeyup="filterReportTable()"
+                               placeholder="Beschreibung">
+                        <input type="text" class="form-control mb-2" id="inputDatum" onkeyup="filterReportTable()"
+                               placeholder="Datum">
+                        <input type="text" class="form-control mb-2" id="inputHochgeladenVon"
+                               onkeyup="filterReportTable()"
+                               placeholder="Hochgeladen von">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <table id="reportTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
+                <thead>
+                <tr>
+                    <th scope="col" data-field="reportID" data-sortable="true">ID</th>
+                    <th scope="col" data-field="title" data-sortable="true">Titel</th>
+                    <th scope="col" data-field="description" data-sortable="true">Beschreibung</th>
+                    <th scope="col" data-field="date" data-sortable="true">Datum</th>
+                    <th scope="col" data-field="uploadedForDr" data-sortable="true">Hochgeladen von</th>
+                    <th scope="col" data-field="download"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <td scope="col" data-field="reportID" data-sortable="true">ID</td>
+                <td scope="col" data-field="title" data-sortable="true">Titel</td>
+                <td scope="col" data-field="description" data-sortable="true">Beschreibung</td>
+                <td scope="col" data-field="date" data-sortable="true">Datum</td>
+                <td scope="col" data-field="uploadedForDr" data-sortable="true">Hochgeladen von</td>
+                <td scope="col" data-field="download"><button type="button" class="btn btn-outline-primary btn-block button-table" onclick=''>Herunterladen</button></td>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -74,9 +103,15 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <script src="../public/app.js"></script>
 </body>
