--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -53,21 +53,23 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6 d-flex align-items-center">
+    <div class="row justify-content-end">
+        <div class="col-sm-8 d-flex align-items-center">
             <h3>Liste aller berechtigten Ärzte</h3>
         </div>
-        <div class="col-sm-3">
+        <div class="col-auto">
             <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen
+                <button type="button" class="btn btn-primary btn-block "
+                        onclick="window.location.href='/patient/arzt-suche.html'">
+                    <i class="material-icons icon-inline">search</i> Arzt suchen
                 </button>
             </form>
         </div>
-        <div class="col-sm-3">
+        <div class="col-auto">
             <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/patient/scan-qr.html'">Freigabescan
+                <button type="button" class="btn btn-primary btn-block "
+                        onclick="window.location.href='/patient/scan-qr.html'">
+                    <i class="material-icons icon-inline">camera_alt</i> Freigabescan
                 </button>
             </form>
         </div>
