--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -42,33 +42,36 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row justify-content-end">
-        <div class="col-sm-8 d-flex align-items-center">
-            <h3>Liste aller berechtigten Ärzte</h3>
+    <div class="row">
+        <div class="col">
+            <h3>Arztsuche</h3>
         </div>
-        <div class="col-auto">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block "
-                        onclick="window.location.href='/patient/arzt-suche.html'">
-                    <i class="material-icons icon-inline">search</i> Arzt suchen
-                </button>
-            </form>
-        </div>
-        <div class="col-auto">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block "
-                        onclick="window.location.href='/patient/scan-qr.html'">
-                    <i class="material-icons icon-inline">camera_alt</i> Freigabescan
-                </button>
-            </form>
+    </div>
+    <div class="row mb-1">
+        <div class="col">
+            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...</button>
         </div>
     </div>
     <div class="row">
-
+        <div class="col-sm-5">
+            <div class="card bg-light mb-3 hidden" id="searchCard">
+                <div class="card-body">
+                    <form>
+                        <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterDoctorTable()"
+                               placeholder="Name">
+                        <input type="text" class="form-control mb-2" id="inputAdresse" onkeyup="filterDoctorTable()"
+                               placeholder="Adresse">
+                        <input type="text" class="form-control mb-2" id="inputArztbezeichnung"
+                               onkeyup="filterDoctorTable()"
+                               placeholder="Arztbezeichnung">
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
-            <table id="arztTabelle" class="table table-hover mt-3" data-toggle="table" data-sortable="true">
+        <div class="col-sm-10">
+            <table id="arztTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
                     <th scope="col" data-field="name" data-sortable="true">Name</th>
@@ -79,7 +82,6 @@
                 </thead>
             </table>
         </div>
-
     </div>
 </div>
 
