--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -82,7 +82,7 @@
     </div>
     <div class="row">
         <div class="col-sm-10">
-            <table id="arztTabelle" class="table table-hover mt-5" data-toggle="table" data-sortable="true">
+            <table id="arztTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
                     <th scope="col" data-field="name" data-sortable="true">Name</th>
