--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -10,6 +10,8 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>OSHealthRec</title>
 </head>
 <body class="doktor-profil">
@@ -25,21 +27,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="mitarbeiter.html">Mitarbeiter</a>
+                <a class="nav-link" href="mitarbeiter.html"><i class="material-icons big">people_alt</i> Mitarbeiter</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="patienten.html">Patienten</a>
-            </li>
-            <li class="nav-item ml-5">
-                <a class="nav-link" href="qr-generator.html">QR-Code Generieren</a>
+                <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
-            Log out
-        </button>
+        <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
