--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -36,6 +36,9 @@
             <li class="nav-item ml-5">
                 <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
             </li>
+            <li class="nav-item ml-5">
+                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code generieren</a>
+            </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
