--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -25,7 +25,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
@@ -33,6 +33,9 @@
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
+            </li>
+            <li class="nav-item active ml-5">
+                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code generieren</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
