--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -33,14 +33,40 @@
             <li class="nav-item ml-5">
                 <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
             </li>
+            <li class="nav-item ml-5">
+                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code generieren</a>
+            </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
 <div class="container">
+    <div class="row justify-content-end">
+        <div class="col-sm-8 d-flex align-items-center">
+            <h3>Liste aller berechtigten Mitarbeiter</h3>
+        </div>
+        <div class="col-auto">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block"
+                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">
+                    <i class="material-icons icon-inline">search</i> Mitarbeiter suchen
+                </button>
+            </form>
+        </div>
+    </div>
     <div class="row">
-
+        <div class="col-sm-12">
+            <table id="mitarbeiterTabelle" class="table table-hover mt-3" data-toggle="table" data-sortable="true">
+                <thead>
+                <tr>
+                    <th scope="col" data-field="name" data-sortable="true">Name</th>
+                    <th scope="col" data-field="geburtsdatum" data-sortable="true">Geburtsdatum</th>
+                    <th scope="col" data-field="button"></th>
+                </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 </div>
 
