--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -57,14 +57,15 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-9 d-flex align-items-center">
+    <div class="row justify-content-end">
+        <div class="col-sm-8 d-flex align-items-center">
             <h3>Liste aller berechtigten Mitarbeiter</h3>
         </div>
-        <div class="col-sm-3">
+        <div class="col-auto">
             <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">Mitarbeiter suchen
+                <button type="button" class="btn btn-primary btn-block"
+                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">
+                    <i class="material-icons icon-inline">search</i> Mitarbeiter suchen
                 </button>
             </form>
         </div>
