--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,14 +19,16 @@
     <a class="navbar-brand" href="profil.html">
         <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="mitarbeiter.html"><i class="material-icons big">people_alt</i> Mitarbeiter</a>
@@ -34,7 +37,8 @@
                 <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code generieren</a>
+                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code
+                    generieren</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -42,22 +46,34 @@
 </nav>
 
 <div class="container">
-    <div class="row justify-content-end">
-        <div class="col-sm-8 d-flex align-items-center">
-            <h3>Liste aller berechtigten Mitarbeiter</h3>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Mitarbeitersuche</h3>
         </div>
-        <div class="col-auto">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block"
-                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">
-                    <i class="material-icons icon-inline">search</i> Mitarbeiter suchen
-                </button>
-            </form>
+    </div>
+    <div class="row mb-1">
+        <div class="col">
+            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <div class="card bg-light mb-3 hidden" id="searchCard">
+                <div class="card-body">
+                    <form>
+                        <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterEmployeeTable()"
+                               placeholder="Name">
+                        <input type="text" class="form-control mb-2" id="inputGeburtsdatum"
+                               onkeyup="filterEmployeeTable()"
+                               placeholder="Gebutsdatum">
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="mitarbeiterTabelle" class="table table-hover mt-3" data-toggle="table" data-sortable="true">
+            <table id="mitarbeiterTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
                 <thead>
                 <tr>
                     <th scope="col" data-field="name" data-sortable="true">Name</th>
@@ -72,9 +88,15 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <script src="../public/app.js"></script>
 </body>
