--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -48,12 +48,13 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Mitarbeitersuche</h3>
+            <h3>Patientensuche</h3>
         </div>
     </div>
     <div class="row mb-1">
         <div class="col">
-            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...</button>
+            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...
+            </button>
         </div>
     </div>
     <div class="row">
@@ -61,11 +62,12 @@
             <div class="card bg-light mb-3 hidden" id="searchCard">
                 <div class="card-body">
                     <form>
-                        <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterEmployeeTable()"
+                        <input type="text" class="form-control mb-2" id="inputName"
+                               onkeyup="filterPatientTable()"
                                placeholder="Name">
                         <input type="text" class="form-control mb-2" id="inputGeburtsdatum"
-                               onkeyup="filterEmployeeTable()"
-                               placeholder="Gebutsdatum">
+                               onkeyup="filterPatientTable()"
+                               placeholder="Geburtsdatum">
                     </form>
                 </div>
             </div>
@@ -73,13 +75,14 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="mitarbeiterTabelle" class="table table-hover" data-toggle="table" data-sortable="true">
+            <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th scope="col" data-field="name" data-sortable="true">Name</th>
-                    <th scope="col" data-field="geburtsdatum" data-sortable="true">Geburtsdatum</th>
-                    <th scope="col" data-field="button"></th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Geburtsdatum</th>
                 </tr>
+                <tbody id="patientenTabelle">
+                </tbody>
                 </thead>
             </table>
         </div>
