--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -47,6 +47,7 @@
 
 <div class="container">
     <div class="row mb-3">
+        <div class="col"></div>
         <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
