--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -58,6 +58,7 @@
         </div>
     </div>
     <div class="row mb-3">
+        <div class="col"></div>
         <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
