--- a/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
+++ b/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,17 +19,20 @@
     <a class="navbar-brand" href="profil.html">
         <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i> Dokumentenverwaltung</a>
+                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i>
+                    Dokumentenverwaltung</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -36,17 +40,41 @@
 </nav>
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <dl class="">
+                        <dt class="">Vorname</dt>
+                        <dd class="" id="vorname"></dd>
 
+                        <dt class="">Nachname</dt>
+                        <dd class="" id="nachname"></dd>
+
+                        <dt class="">Geschlecht</dt>
+                        <dd class="" id="geschlecht"></dd>
+
+                        <dt class="">Geburtsdatum</dt>
+                        <dd class="" id="geburtsdatum"></dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <script src="../public/app.js"></script>
 </body>
