--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -6,27 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>OSHealthRec</title>
+
     <script type="text/javascript" src="../js/qrcode.min.js"></script>
+    <script type="text/javascript" src="../public/js/print.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
         <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="mitarbeiter.html"><i class="material-icons big">people_alt</i> Mitarbeiter</a>
@@ -35,7 +40,8 @@
                 <a class="nav-link" href="patienten.html"><i class="material-icons big">healing</i> Patienten</a>
             </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code generieren</a>
+                <a class="nav-link" href="qr-generator.html"><i class="material-icons big">border_inner</i> QR-Code
+                    generieren</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -43,28 +49,55 @@
 </nav>
 
 <div class="container">
-    <div class="row">
-        <h3 class="mb-5">QR-Code zur Freigabe für den Patienten</h3>
+    <div class="row justify-content-center">
+        <div class="col-5">
+            <div class="card bg-light mb-3">
+                <h5 class="card-header">QR-Code zur Freigabe für den Patienten</h5>
+                <div class="card-body">
+                    <p class="card-text>"> Diesen QR-Code können Patienten mittels ihres Smartphones einscannen.
+                        Dies vereinfacht es Ihren Patienten Sie als Arzt hinzuzufügen und Ihnen damit die Freigabe über
+                        die Krankenakte zu erteilen.</br>
+                        </br>
+                        Sie können den Code über den Button ausdrucken.</p>
+                    <button type="button" class="btn btn-primary btn-block"
+                            onclick="printJS({printable: 'qrcode', type: 'html', header: 'Scannen, um die Freigabe zu erteilen:'})">
+                        Drucken
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="row">
-        <div id="qrcode"></div>
-        <script type="text/javascript">
-            let participantId = sessionStorage.getItem('participantId');
-            let qrcode = new QRCode(document.getElementById('qrcode'), {
-                text: participantId,
-                width: 300,
-                height: 300,
-            });
-        </script>
 
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <div class="card bg-light mb-3">
+                <div class="card-body">
+                    <div id="qrcode"></div>
+                    <script type="text/javascript">
+                        let participantId = sessionStorage.getItem('participantId');
+                        let qrcode = new QRCode(document.getElementById('qrcode'), {
+                            text: participantId,
+                            width: 300,
+                            height: 300,
+                        });
+                    </script>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 <script src="../app.js"></script>
 
