Pfad zu print.js angepasst

--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -15,7 +15,7 @@
     <title>OSHealthRec</title>
 
     <script type="text/javascript" src="../js/qrcode.min.js"></script>
-    <script type="text/javascript" src="../public/js/print.min.js"></script>
+    <script type="text/javascript" src="../js/print.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
