Drucker-Icon hinzugefügt

--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -61,7 +61,7 @@
                         Sie können den Code über den Button ausdrucken.</p>
                     <button type="button" class="btn btn-primary btn-block"
                             onclick="printJS({printable: 'qrcode', type: 'html', header: 'Scannen, um die Freigabe zu erteilen:'})">
-                        Drucken
+                        <i class="material-icons icon-inline">print</i> Drucken
                     </button>
                 </div>
             </div>
